--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
         <hr>
         <div class="news-container">
             <div class="news-card">
-                <video src="/media/video_ciencia.mp4" controls><track kind="subtitles"></video>
+                <video src="/media/video_ciencia.mp4" controls><track kind="subtitles"></track></video>
                 <h4>¿Qué es ciencia?</h4>
                 <p>Lorem ipsum dolor sit amet</p>
                 <p>PARA CONOCER MÁS SOBRE ESTE TEMA, HAGA CLICK <a href="https://youtu.be/o_iQaqXZv5Y" target="_blank">AQUÍ</a></p>
