--- a/home.html
+++ b/home.html
@@ -59,13 +59,13 @@
                 <p>PARA CONOCER MÁS SOBRE ESTE TEMA, HAGA CLICK <a href="https://youtu.be/o_iQaqXZv5Y" target="_blank">AQUÍ</a></p>
             </div>
             <div class="news-card">
-                <video src="/media/video_programacion.mp4" controls></video>
+                <video src="/media/video_programacion.mp4" controls><track kind="subtitles"></track></video>
                 <h4>Programación para niños</h4>
                 <p>Lorem ipsum dolor sit amet</p>
                 <p>PARA CONOCER MÁS SOBRE ESTE TEMA, HAGA CLICK <a href="https://youtu.be/VZe9tjqa9xw" target="_blank">AQUÍ</a></p>
             </div>
             <div class="news-card">
-                <video src="/media/video_quimica_biologia.mp4" controls></video>
+                <video src="/media/video_quimica_biologia.mp4" controls><track kind="subtitles"></track></video>
                 <h4>Título</h4>
                 <p>Lorem ipsum dolor sit amet</p>
                 <p>PARA CONOCER MÁS SOBRE ESTE TEMA, HAGA CLICK <a href="https://youtu.be/bW9FZfITXUI" target="_blank">AQUÍ</a></p>
