--- a/reference.html
+++ b/reference.html
@@ -50,7 +50,7 @@
     </header>
     <section class="periodic-table-container">
         <h2>Tabla Periódica de los Elementos</h2>
-        <table class="periodic-table">
+        <caption>Elementos químicos<table class="periodic-table"></caption>
             <tr class="period-1">
                <td class="alkali"><a class="symbol" target="_blank" href="https://en.wikipedia.org/wiki/Hydrogen">H</a></td>        
                <td class="alkaline-earth false"></td>
@@ -192,7 +192,7 @@
                <td class="noble"><a class="symbol" target="_blank" href="https://en.wikipedia.org/wiki/Oganesson">Og</a></td>
             </tr>
            </table>
-           <table class="f-block">
+           <caption>Elementos químicos<table class="f-block"></caption>
             <tr>
                 <td class="f-group"><a class="symbol" target="_blank" href="https://en.wikipedia.org/wiki/Lanthanum">La</a></td>
                 <td class="f-group"><a class="symbol" target="_blank" href="https://en.wikipedia.org/wiki/Cerium">Ce</a></td>      
