--- a/reference.html
+++ b/reference.html
@@ -50,7 +50,7 @@
     </header>
     <section class="periodic-table-container">
         <h2>Tabla Periódica de los Elementos</h2>
-        <table class="periodic-table">
+        <table class="periodic-table"><caption>Elementos químicos</caption>
             <tr class="period-1">
                <td class="alkali"><a class="symbol" target="_blank" href="https://en.wikipedia.org/wiki/Hydrogen">H</a></td>        
                <td class="alkaline-earth false"></td>
