--- a/reference.html
+++ b/reference.html
@@ -192,7 +192,7 @@
                <td class="noble"><a class="symbol" target="_blank" href="https://en.wikipedia.org/wiki/Oganesson">Og</a></td>
             </tr>
            </table>
-           <table class="f-block">
+           <table class="f-block"><caption>Elementos químicas</caption>
             <tr>
                 <td class="f-group"><a class="symbol" target="_blank" href="https://en.wikipedia.org/wiki/Lanthanum">La</a></td>
                 <td class="f-group"><a class="symbol" target="_blank" href="https://en.wikipedia.org/wiki/Cerium">Ce</a></td>      
