--- a/reference.html
+++ b/reference.html
@@ -51,6 +51,9 @@
     <section class="periodic-table-container">
         <h2>Tabla Periódica de los Elementos</h2>
         <table class="periodic-table"><caption></caption>
+            <tr>
+                <th class="transition false"></th>   
+            </tr>
             <tr class="period-1">
                <td class="alkali"><a class="symbol" target="_blank" href="https://en.wikipedia.org/wiki/Hydrogen">H</a></td>        
                <td class="alkaline-earth false"></td>
