--- a/reference.html
+++ b/reference.html
@@ -197,6 +197,9 @@
            </table>
            <table class="f-block"><caption></caption>
             <tr>
+                <th class="transition false"></th>   
+            </tr>
+            <tr>
                 <td class="f-group"><a class="symbol" target="_blank" href="https://en.wikipedia.org/wiki/Lanthanum">La</a></td>
                 <td class="f-group"><a class="symbol" target="_blank" href="https://en.wikipedia.org/wiki/Cerium">Ce</a></td>      
                 <td class="f-group"><a class="symbol" target="_blank" href="https://en.wikipedia.org/wiki/Praseodymium">Pr</a></td>
