--- a/contact.html
+++ b/contact.html
@@ -57,11 +57,11 @@
                 </div>
                 <div class="vr"></div>
                 <div class="about-container">
-                    <hgroup>
+                    <h6group>
                         <h4>Diego Chan</h4>
                         <p>8-994-766</p>
                         <p>Licenciatura en Ingeniería de Software M-17</p>
-                    </hgroup>
+                    </h6group>
                     <p>Mantiene un interés en el diseño de interfaces web y desarrollo de videojuegos con motores como Unity y Unreal.</p>
                 </div>
             </div>
@@ -71,11 +71,11 @@
                 </div>
                 <div class="vr"></div>
                 <div class="about-container">
-                    <hgroup>
+                    <h6group>
                         <h4>Jonathan Salazar</h4>
                         <p>3-747-2358</p>
                         <p>Licenciatura en Ingeniería de Software M-17</p>
-                    </hgroup>
+                    </h6group>
                     <p>Autodidacta entusiasta, siempre en busca de nuevos conocimientos.</p>
                 </div>
             </div>
@@ -87,11 +87,11 @@
                 </div>
                 <div class="vr"></div>
                 <div class="about-container">
-                    <hgroup>
+                    <h6group>
                         <h4>Nicole Valdes</h4>
                         <p>8-987-2358</p>
                         <p>Licenciatura en Ingeniería de Software M-17</p>
-                    </hgroup>
+                    </h6group>
                     <p>Diseñadora gráfica. Interesada en la ingeniería de software y procesos ágiles.</p>
                 </div>
             </div>
@@ -101,11 +101,11 @@
                 </div>
                 <div class="vr"></div>
                 <div class="about-container">
-                    <hgroup>
+                    <h6group>
                         <h4>Yeshua Zapata</h4>
                         <p>8-1010-953</p>
                         <p>Licenciatura en Ingeniería de Software M-17</p>
-                    </hgroup>
+                    </h6group>
                     <p>Social media manager. Interesado en sistemas de gestión de bases de datos relacionales.</p>
                 </div>
             </div>
